--- a/circles.html
+++ b/circles.html
@@ -15,16 +15,19 @@ body {
   <script>
     var s = document.getElementById("canvas");
         document.body.style.backgroundColor = 'rgb(' + Math.random()*255 + ',' +  Math.random()*255 + ',' + Math.random()*255 + ')';
+        var ratio = window.devicePixelRatio || 1;
+        w = screen.width * ratio;
+        h = screen.height * ratio;
         var taken = [];
-        max_circles = screen.width*screen.height/(30*30)/4
+        max_circles = w*h/(30*30)/4
         console.log(max_circles)
         for (i = 0; i < max_circles; i++) { 
               diameter = Math.random()*500+50;
               var x = 0;
               var y = 0;
               while (true) {
-                    x = Math.random() * screen.width*1.5 - (screen.width * 0.25)
-                    y = Math.random() * screen.height*1.5 - (screen.height*0.25)
+                    x = Math.random() * w * 1.5 - (w * 0.25)
+                    y = Math.random() * h * 1.5 - (h * 0.25)
                     var found = false
                     for(t = 0; t < taken.length; ++t) {
                           a = 30;
