Speed it up on mobile

--- a/circles.html
+++ b/circles.html
@@ -19,7 +19,7 @@ body {
         w = screen.width * ratio;
         h = screen.height * ratio;
         var taken = [];
-        max_circles = w*h/(30*30)/4
+        max_circles = w*h/(30*30)/12;
         console.log(max_circles)
         for (i = 0; i < max_circles; i++) { 
               diameter = Math.random()*500+50;
